Fix YouTube QA compile contracts